src/components/Searchbar/searchBar.css
.search{
	margin-top: 2rem;
	display: flex;
	flex-direction: row;
	text-align: center;
	justify-content: center;
}

.searchbar__text h1{
	font-family: 'Pacifico', cursive;
}

.search input{
	margin-top: .5rem;
	width: 480px;
	height: 35px;
	padding: 10px;
	font-size: 15px;
	border: none;
	outline: none;
	border-bottom: 2px solid #926000;
}
.search input:focus{
	border: 2px solid #926000;
	border-radius: 10px;
}

